2006-01-12  ------ omnetpp-3.2p1 released ------

2005-10-19  ------ omnetpp-3.2 released ------

2005-10-05  Andras Varga

	* cgate.cc: performance: made fullname creation on-demand

2005-09-15  Andras Varga

	* csimplemodule.cc: added method cancelAndDelete(cMessage *msg).

2005-09-14  Andras Varga

	* cpolymorphic.cc, etc: dup() moved up to cPolymorphic, and return type
	changed to cPolymorphic. See include/ChangeLog.

	* cmodule.cc, csimplemodule.cc, etc: module constructor signature 
	change, see comment in include/ChangeLog

2005-09-12  Andras Varga

	* cxmlelement.cc, minixpath.cc: fixed getElementByPath() bug 
	introduced 2005-08-09.

	* cdefaultlist.cc: destructor to use ev.undisposedObject().

2005-08-09  Andras Varga

	* cxmlelement.cc: bugfixes in the mini-XPath interpreter (leading
	'//' was handled incorrectly), and stripped minixpath.cc/h from it.

2005-08-07  Andras Varga

	* cxmlelement.cc: the builtin mini-XPath interpreter turned into a 
	class (MiniXPath), and it now understands parameters ($PARAM) inside 
	predicates; parameter values come from a cXMLElement::ParamResolver
	object.

	* cmessage.cc: implemented reference counting of encapsulated messages.
	See include/ChangeLog for more comments.

2005-07-25  Andras Varga

	* coutvect.cc: implemented recordWithTimestamp() functions.

	* cpar.cc: added call to omodp->handleParameterChange() to cModulePar 
	each time the parameter's value changes.

	* cpar.cc: removed beforeChange()/afterChange() calls from setInput()
	and setPrompt(), because these methods don't change the stored value.

	* several files: adopted to cCommBuffer change (packObject(), 
	unpackObject() moved into the class)

	* cstat.cc: cStdDev::info() now prints mean, stddev, min, max as well

2005-07-24  Andras Varga

	* cdispstr.cc: added setTagArg() method for numeric (long) argument.

	* cpar.cc: added isConstant() member to cPar

	* cmessage.cc: arrivedOn() impl change, see include/ChangeLog
