@@ -1,3 +1,8 @@
+2006-02-27  Andras Varga
+
+	* cmersennetwister.cc, clcg32.cc: initialize() updated for parallel
+	simulation
+
 2006-01-12  ------ omnetpp-3.2p1 released ------
 
 2005-10-19  ------ omnetpp-3.2 released ------
